# PenIt

./: README.md  pyproject.toml
penit/: __init__.py  __main__.py  app.py
penit/engine/: color_cycler.py  drawing_manager.py  smoothing.py
penit/models/: drawing.py  settings.py
penit/platform/: __init__.py  base.py  macos.py  wayland.py  win32.py  x11.py
penit/ui/: control_panel.py  icons.py  overlay_window.py  styles.py  tray.py
